Project: add HamsterSimulatorLanguage

--- a/.github/workflows/github-actions-release.yaml
+++ b/.github/workflows/github-actions-release.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   PROJECT_NAME: "mps-alfi-samples"
-  LANGUAGE_NAME: "AlfiSampleLanguage"
+  HAMSTER_LANGUAGE_NAME: "HamsterSimulatorLanguage"
 
 jobs:
   call-build-workflow:
@@ -53,6 +53,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: build/artifacts/${{ env.PROJECT_NAME }}/${{ env.LANGUAGE_NAME }}.zip
-          asset_name: ${{ env.LANGUAGE_NAME }}.zip
+          asset_path: build/artifacts/${{ env.PROJECT_NAME }}/${{ env.HAMSTER_LANGUAGE_NAME }}.zip
+          asset_name: ${{ env.HAMSTER_LANGUAGE_NAME }}.zip
           asset_content_type: application/zip
