--- a/.github/workflows/github-actions-integration.yaml
+++ b/.github/workflows/github-actions-integration.yaml
@@ -3,7 +3,8 @@ name: Integration Build
 on:
   push:
     branches:
-      - '*'
+      - 'main'
+      - 'feature/**'
 
 jobs:
   call-build-workflow:
