--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ ext.languageName = "AlfiSampleLanguage"
 ext.mpsPlugins = [  ]
 
 ext.customMpsPlugins = [
+    "alfi": "https://github.com/vimotest/mps-alfi/archive/refs/tags/1.0.0-alpha1.zip"
 ]
 
 apply from: 'gradle/init-gradle-scripts.gradle'
