--- a/build.xml
+++ b/build.xml
@@ -255,6 +255,7 @@
       <module namespace="HamsterSimulatorLanguage.runtime" type="solution" uuid="bbe92973-a4d0-4851-93ef-b76e4564b102">
         <dependencies>
           <module ref="e9b40a72-6930-481d-bdce-a0a866bf715e(alfi.StandardModelLibrary)" kind="cl" />
+          <module ref="f13dd4ca-a567-47d7-98bc-31b72d168722(alfi.StandardModelLibraryStubs)" kind="cl" />
         </dependencies>
         <uses>
           <language id="l:bf897046-1e4e-4c49-b9d6-a7ab6d3f8703:alfi" />
@@ -296,6 +297,7 @@
           <module ref="bf897046-1e4e-4c49-b9d6-a7ab6d3f8703(alfi)" kind="cl" />
           <module ref="05b98dee-d1dd-4a0e-90e8-7aa649a2d7e3(alfi.PrimitiveMapping)" kind="cl" />
           <module ref="e9b40a72-6930-481d-bdce-a0a866bf715e(alfi.StandardModelLibrary)" kind="cl" />
+          <module ref="f13dd4ca-a567-47d7-98bc-31b72d168722(alfi.StandardModelLibraryStubs)" kind="cl" />
           <module ref="d0e1230a-72e3-4b6b-88f2-98d924f7de11(alfi.toBaseLanguage)" kind="cl" />
           <module ref="63b449db-0918-4a4a-a891-2c430ab133e4(org.junit.junit5)" kind="cl" />
         </dependencies>
@@ -601,6 +603,7 @@
         <fileset file="${artifacts.mps}/lib/platform-loader.jar" />
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.jar" />
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibrary.jar" />
+        <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibraryStubs.jar" />
         <fileset file="${artifacts.mps}/languages/runtimes/jetbrains.mps.analyzers.runtime.jar" />
         <fileset file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.logging.runtime.jar" />
         <fileset file="${artifacts.mps}/languages/runtimes/jetbrains.mps.dataFlow.runtime.jar" />
@@ -669,6 +672,7 @@
         <fileset file="${artifacts.mps}/lib/platform-loader.jar" />
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.jar" />
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibrary.jar" />
+        <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibraryStubs.jar" />
         <fileset file="${artifacts.mps}/languages/baseLanguage/jetbrains.mps.baseLanguage.logging.runtime.jar" />
         <fileset file="${artifacts.mps}/plugins/mps-core/languages/util/jetbrains.mps.execution.util.jar" />
         <fileset file="${artifacts.mps}/languages/languageDesign/jetbrains.mps.lang.core.jar" />
@@ -691,6 +695,7 @@
       </src>
       <classpath>
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibrary.jar" />
+        <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibraryStubs.jar" />
         <fileset file="${artifacts.alfi}/alfiSandboxes/StandardModelLibrary.jar" />
       </classpath>
     </javac>
@@ -731,6 +736,7 @@
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.jar" />
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.PrimitiveMapping.jar" />
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibrary.jar" />
+        <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.StandardModelLibraryStubs.jar" />
         <fileset file="${artifacts.alfi}/alfi/languages/alfi/alfi.toBaseLanguage.jar" />
         <fileset file="${artifacts.mps}/plugins/mps-core/languages/util/jetbrains.mps.execution.util.jar" />
         <fileset file="${artifacts.alfi}/alfiSandboxes/StandardModelLibrary.jar" />
