--- a/gradle/alfi/setup-alf-workspace.gradle
+++ b/gradle/alfi/setup-alf-workspace.gradle
@@ -28,6 +28,7 @@ task setupAlfWorkspace {
             activity HamsterTestSuiteActivity() {
                 new HamsterTestSuite().HelloPaule();
                 new HamsterTestSuite().Demo();
+                WriteLine("FINISHED");
             }
             """
         }
