--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,14 @@ task fixCopyStandardModelLibraryStubs {
     group 'other'
     description 'Workaround for wrong lookup of StandardModelLibraryStubs.jar'
     doLast {
-        delete "$buildDir/mps-bundle/dependencies/dependencies/alfi/lib/"
+        delete "$buildDir/mps-bundle/dependencies/dependencies/alfi"
         copy {
             from "$buildDir/mps-bundle/dependencies/alfi/lib/"
             into "$buildDir/mps-bundle/dependencies/dependencies/alfi/lib/"
+        }
+        copy {
+            from "$mpsHome/lib/idea_rt.jar"
+            into "$buildDir/mps-bundle/dependencies/tests/"
         }
     }
 }
