Generation: generate ComponentTest and setup execution support

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ task fixCopyStandardModelLibraryStubs {
             from "$buildDir/mps-bundle/dependencies/alfi/lib/"
             into "$buildDir/mps-bundle/dependencies/dependencies/alfi/lib/"
         }
+        delete "$buildDir/mps-bundle/dependencies/tests"
         copy {
             from "$mpsHome/lib/idea_rt.jar"
             into "$buildDir/mps-bundle/dependencies/tests/"
