--- a/gradle/alfi/setup-alf-workspace.gradle
+++ b/gradle/alfi/setup-alf-workspace.gradle
@@ -7,9 +7,9 @@ task setupAlfWorkspace {
         file(targetDirectory).deleteDir()
         file(targetDirectory).mkdir()
 
-        def jarWithAlfFiles = file("$buildDir/artifacts/mps-alfi-samples/mps-alfi-samples/languages/hamster-simulator-language/HamsterSimulatorLanguage.sandbox-src.jar")
+        def jarWithHamsterAlfFiles = file("$buildDir/artifacts/mps-alfi-samples/mps-alfi-samples/languages/hamster-simulator-language/HamsterSimulatorLanguage.sandbox-src.jar")
         copy {
-            from(zipTree(jarWithAlfFiles)){
+            from(zipTree(jarWithHamsterAlfFiles)){
                 include 'HamsterSimulatorLanguage/sandbox/**/*.alf'
             }
             into file("$targetDirectory")
@@ -22,6 +22,26 @@ task setupAlfWorkspace {
             file("$targetDirectory/HamsterTestSuiteActivity.alf").text = """
             activity HamsterTestSuiteActivity() {
                 new HamsterTestSuite().Demo();
+                WriteLine("FINISHED");
+            }
+            """
+        }
+
+        def jarWithSwcAlfFiles = file("$buildDir/artifacts/mps-alfi-samples/mps-alfi-samples/languages/software-component-language/HamsterSimulatorLanguage.sandbox-src.jar")
+        copy {
+            from(zipTree(jarWithSwcAlfFiles)){
+                include 'HamsterSimulatorLanguage/sandbox/**/*.alf'
+            }
+            into file("$targetDirectory")
+            eachFile { FileCopyDetails details ->
+                details.path = details.path.replaceFirst('HamsterSimulatorLanguage/sandbox/', '')
+            }
+            includeEmptyDirs = false
+
+            // workaround: test suite generation has to be adjusted, until so, we add a manual activity for this
+            file("$targetDirectory/Webstore_ComponentTestActivity.alf").text = """
+            activity Webstore_ComponentTestActivity() {
+                new Webstore_ComponentTest().testCase();
                 WriteLine("FINISHED");
             }
             """
